--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
