--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server",
-    "dev": "cross-env NODE_ENV=development nodemon server"
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -18,22 +17,10 @@
   },
   "homepage": "https://github.com/HarryWho/NodeApp#readme",
   "dependencies": {
-    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
-    "method-override": "^3.0.0",
-    "moment": "^2.29.1",
-    "mongoose": "^6.2.4",
-    "morgan": "^1.10.0",
-    "passport": "^0.5.2",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "ws": "^8.5.0"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
+    "mongoose": "^6.2.4"
   }
 }
